--- a/tools/pipelines/templates/1ES/build-npm-package.yml
+++ b/tools/pipelines/templates/1ES/build-npm-package.yml
@@ -185,7 +185,7 @@ extends:
           - job: build
             displayName: Build
             ${{ if eq(variables['Build.Reason'], 'PullRequest') }}:
-              timeoutInMinutes: 60
+              timeoutInMinutes: 90
             ${{ else }}:
               # CI builds run more aggressive compat configurations which can take longer.
               # See "FullCompat" under packages\test\test-version-utils\README.md for more details.
@@ -194,7 +194,9 @@ extends:
               # over time and it might be necessary to bump it.
               # AB#6680 is also relevant here, which tracks rethinking how and where we run tests (likely with
               # a focus on e2e tests)
-              timeoutInMinutes: 60
+              # Note, This was recent updated to 90 minutes to account for the additional build time added from extending 
+              # the Microsoft 1ES template required for corporate security compliance
+              timeoutInMinutes: 90
             variables:
               - group: ado-feeds
               - name: testCoverage
