--- a/tools/pipelines/build-docs.yml
+++ b/tools/pipelines/build-docs.yml
@@ -312,6 +312,8 @@ stages:
           submodules: false
           clean: true
 
+        - template: templates/include-use-node-version.yml
+
         - task: DownloadPipelineArtifact@2
           displayName: 'Copy fluidframework-docs to public folder'
           inputs:
