--- a/packages/drivers/odsp-driver/package.json
+++ b/packages/drivers/odsp-driver/package.json
@@ -93,6 +93,7 @@
 		"@types/node": "^18.19.0",
 		"@types/node-fetch": "^2.5.10",
 		"@types/sinon": "^7.0.13",
+		"@types/uuid": "^9.0.2",
 		"c8": "^8.0.1",
 		"copyfiles": "^2.4.1",
 		"cross-env": "^7.0.3",
