--- a/azure/packages/azure-service-utils/package.json
+++ b/azure/packages/azure-service-utils/package.json
@@ -106,6 +106,7 @@
 		"@fluidframework/eslint-config-fluid": "^3.3.0",
 		"@microsoft/api-extractor": "^7.39.1",
 		"@types/jsrsasign": "^10.5.12",
+		"@types/uuid": "^9.0.2",
 		"copyfiles": "^2.4.1",
 		"eslint": "~8.50.0",
 		"eslint-config-prettier": "~9.0.0",
