--- a/examples/apps/contact-collection/package.json
+++ b/examples/apps/contact-collection/package.json
@@ -59,6 +59,7 @@
 		"@types/jest-environment-puppeteer": "2.2.0",
 		"@types/node": "^18.19.0",
 		"@types/puppeteer": "1.3.0",
+		"@types/uuid": "^9.0.2",
 		"clean-webpack-plugin": "^4.0.0",
 		"cross-env": "^7.0.3",
 		"eslint": "~8.50.0",
