--- a/examples/data-objects/todo/package.json
+++ b/examples/data-objects/todo/package.json
@@ -68,6 +68,7 @@
 		"@types/puppeteer": "1.3.0",
 		"@types/react": "^17.0.44",
 		"@types/react-dom": "^17.0.18",
+		"@types/uuid": "^9.0.2",
 		"cross-env": "^7.0.3",
 		"css-loader": "^1.0.0",
 		"eslint": "~8.50.0",
