--- a/packages/dds/matrix/package.json
+++ b/packages/dds/matrix/package.json
@@ -166,8 +166,7 @@
 		"rimraf": "^4.4.0",
 		"ts-node": "^10.9.1",
 		"tsc-multi": "^1.1.0",
-		"typescript": "~5.1.6",
-		"uuid": "^9.0.0"
+		"typescript": "~5.1.6"
 	},
 	"fluidBuild": {
 		"tasks": {
