--- a/packages/framework/agent-scheduler/package.json
+++ b/packages/framework/agent-scheduler/package.json
@@ -114,6 +114,7 @@
 		"@fluidframework/eslint-config-fluid": "^3.3.0",
 		"@microsoft/api-extractor": "^7.39.1",
 		"@types/node": "^18.19.0",
+		"@types/uuid": "^9.0.2",
 		"copyfiles": "^2.4.1",
 		"eslint": "~8.50.0",
 		"prettier": "~3.0.3",
