--- a/packages/framework/aqueduct/package.json
+++ b/packages/framework/aqueduct/package.json
@@ -174,6 +174,13 @@
 		}
 	},
 	"typeValidation": {
-		"broken": {}
+		"broken": {
+			"ClassDeclaration_DataObjectFactory": {
+				"forwardCompat": false
+			},
+			"ClassDeclaration_PureDataObjectFactory": {
+				"forwardCompat": false
+			}
+		}
 	}
 }
