--- a/examples/data-objects/diceroller/package.json
+++ b/examples/data-objects/diceroller/package.json
@@ -67,6 +67,7 @@
 		"prettier": "~3.0.3",
 		"puppeteer": "^17.1.3",
 		"rimraf": "^4.4.0",
+		"source-map-loader": "^2.0.0",
 		"ts-jest": "^29.1.1",
 		"ts-loader": "^9.3.0",
 		"typescript": "~5.1.6",
