--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,11 +2,83 @@
 # Each line is a file pattern followed by one or more owners.
 # More details on the format: https://help.github.com/articles/about-codeowners/
 
+# ORDER MATTERS! The last matching pattern has the most precedence.
+
 # When updating this file, you should also consider updating the GitHub label config in actions-labeler.yml so that
 # any area changes are labeled correctly.
 
-# ORDER MATTERS! The last matching pattern has the most precedence.
+# Files in the root
+/*.*                                                                      @microsoft/fluid-cr-core
 
-# NOTICE: Ownership via this file will block PR until an owner approves. 
-# Taking ownership requires a commitment to review all PRs for the selected files.
+/.devcontainer/                                                           @microsoft/fluid-cr-infra
+/.github/                                                                 @microsoft/fluid-cr-infra
+/.github/ISSUE_TEMPLATE/                                                  @microsoft/fluid-cr-docs
+/.vscode/                                                                 @microsoft/fluid-cr-infra
 
+/azure/                                                                   @microsoft/fluid-cr-framework
+
+/build-tools/                                                             @microsoft/fluid-cr-infra
+
+/common/build/                                                            @microsoft/fluid-cr-infra
+/common/lib/                                                              @microsoft/fluid-cr-core
+/docs/                                                                    @microsoft/fluid-cr-docs
+
+/examples/                                                                @microsoft/fluid-cr-framework
+/experimental/                                                            @microsoft/fluid-cr-framework
+/experimental/PropertyDDS/                                                @evaliyev @karlbom @nedalhy @ruiterr
+/experimental/dds/tree/                                                   @microsoft/fluid-cr-tree
+/packages/dds/tree/                                                       @microsoft/fluid-cr-tree
+/packages/dds/                                                            @microsoft/fluid-cr-dds
+/packages/drivers/                                                        @microsoft/fluid-cr-drivers
+/packages/drivers/odsp*/                                                  @microsoft/fluid-cr-drivers @microsoft/fluid-cr-odsp
+/packages/framework/                                                      @microsoft/fluid-cr-framework
+/packages/loader/                                                         @microsoft/fluid-cr-loader
+/packages/runtime/                                                        @microsoft/fluid-cr-runtime
+/packages/test/                                                           @microsoft/fluid-cr-test
+/packages/tools/                                                          @microsoft/fluid-cr-tools
+/packages/tools/devtools/                                                 @microsoft/team-rohan
+/packages/utils/                                                          @microsoft/fluid-cr-infra
+/packages/utils/odsp-doclib-utils/                                        @microsoft/fluid-cr-odsp
+/packages/utils/telemetry-utils/                                          @microsoft/fluid-cr-telemetry
+/server/                                                                  @microsoft/fluid-cr-server
+/tools/                                                                   @microsoft/fluid-cr-tools
+/tools/api-markdown-documenter                                            @microsoft/fluid-cr-docs @microsoft/fluid-cr-infra
+/tools/markdown-magic/                                                    @microsoft/fluid-cr-infra
+/tools/markdown-magic/src/templates                                       @microsoft/fluid-cr-docs
+/tools/pipelines/                                                         @microsoft/fluid-cr-infra
+
+# PUBLIC API REPORTS
+# All packages are assumed to have public APIs unless defined otherwise in the sections below.
+**/api-report/                                         @microsoft/fluid-cr-api
+# These packages represent the primary public API of the framework.
+azure/packages/azure-client/api-report/                @microsoft/fluid-cr-api
+azure/packages/azure-service-utils/api-report/         @microsoft/fluid-cr-api
+packages/framework/fluid-framework/api-report/         @microsoft/fluid-cr-api
+packages/framework/tinylicious-client/api-report/      @microsoft/fluid-cr-api
+
+packages/dds/tree/api-report/                          @microsoft/fluid-cr-tree
+
+# INTERNAL API REPORTS
+# The packages listed here are not necessarily considered part of the public API.
+packages/dds/shared-object-base/api-report/            @microsoft/fluid-cr-framework
+
+# TODO: uncomment once experimental reports have moved
+experimental/dds/**/api-report/                        @microsoft/fluid-cr-dds
+packages/framework/dds-interceptions/api-report/       @microsoft/fluid-cr-dds
+
+packages/framework/request-handler/api-report/         @microsoft/fluid-cr-runtime
+packages/dds/shared-summary-block/api-report/          @microsoft/fluid-cr-runtime
+packages/framework/synthesize/api-report/              @microsoft/fluid-cr-runtime
+
+packages/drivers/debugger/api-report/                  @microsoft/fluid-cr-tools
+packages/utils/tool-utils/api-report/                  @microsoft/fluid-cr-tools
+
+packages/loader/driver-utils/api-report/               @microsoft/fluid-cr-drivers
+packages/test/test-driver-definitions/api-report/      @microsoft/fluid-cr-drivers
+
+packages/drivers/routerlicious-driver/api-report/      @microsoft/fluid-cr-server
+
+experimental/dds/tree/api-report                       @microsoft/fluid-cr-tree
+
+# No owners for package.json files to avoid review spam when mono-repo dependencies are updated
+package.json @msfluid-bot
