--- a/examples/benchmarks/tablebench/tsconfig.json
+++ b/examples/benchmarks/tablebench/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"extends": [
 		"../../../common/build/build-common/tsconfig.base.json",
-		"../../../common/build/build-common/tsconfig.test.json",
+		"../../../common/build/build-common/tsconfig.cjs.json",
 	],
 	"include": ["src/**/*"],
 	"exclude": ["src/test/**/*"],
