--- a/examples/apps/collaborative-textarea/package.json
+++ b/examples/apps/collaborative-textarea/package.json
@@ -11,9 +11,7 @@
 	},
 	"license": "MIT",
 	"author": "Microsoft and contributors",
-	"main": "lib/index.js",
-	"module": "lib/index.js",
-	"types": "lib/index.d.ts",
+	"type": "module",
 	"scripts": {
 		"build": "fluid-build . --task build",
 		"build:compile": "fluid-build . --task compile",
@@ -57,11 +55,10 @@
 		"@fluidframework/eslint-config-fluid": "^3.3.0",
 		"@fluidframework/test-tools": "^1.0.195075",
 		"@fluidframework/test-utils": "workspace:~",
-		"@types/expect-puppeteer": "2.2.1",
+		"@types/expect-puppeteer": "5.0.6",
 		"@types/jest": "29.5.3",
-		"@types/jest-environment-puppeteer": "2.2.0",
+		"@types/jest-environment-puppeteer": "5.0.6",
 		"@types/node": "^18.19.0",
-		"@types/puppeteer": "1.3.0",
 		"@types/react": "^17.0.44",
 		"@types/react-dom": "^17.0.18",
 		"cross-env": "^7.0.3",
@@ -69,10 +66,10 @@
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^29.6.2",
 		"jest-junit": "^10.0.0",
-		"jest-puppeteer": "^6.2.0",
+		"jest-puppeteer": "^9.0.2",
 		"prettier": "~3.0.3",
 		"process": "^0.11.10",
-		"puppeteer": "^17.1.3",
+		"puppeteer": "^22.0.0",
 		"rimraf": "^4.4.0",
 		"ts-jest": "^29.1.1",
 		"ts-loader": "^9.3.0",
