--- a/packages/framework/collabspaces/package.json
+++ b/packages/framework/collabspaces/package.json
@@ -129,6 +129,7 @@
 		"@fluidframework/protocol-definitions": "^3.2.0-231454",
 		"@fluidframework/runtime-definitions": "workspace:~",
 		"@fluidframework/runtime-utils": "workspace:~",
+		"@fluidframework/shared-object-base": "workspace:~",
 		"@fluidframework/telemetry-utils": "workspace:~",
 		"@tiny-calc/nano": "0.0.0-alpha.5",
 		"lz4js": "^0.2.0",
