--- a/packages/common/client-utils/package.json
+++ b/packages/common/client-utils/package.json
@@ -163,6 +163,11 @@
 		}
 	},
 	"typeValidation": {
-		"broken": {}
+		"broken": {
+			"RemovedClassDeclaration_EventForwarder": {
+				"backCompat": false,
+				"forwardCompat": false
+			}
+		}
 	}
 }
