--- a/experimental/dds/ot/sharejs/json1/tsconfig.json
+++ b/experimental/dds/ot/sharejs/json1/tsconfig.json
@@ -6,7 +6,7 @@
 	"exclude": ["src/test/**/*"],
 	"compilerOptions": {
 		"rootDir": "./src",
-		"outDir": "./dist"
+		"outDir": "./dist",
 	},
 	"include": ["src/**/*"],
 }
