--- a/docs/package.json
+++ b/docs/package.json
@@ -13,7 +13,7 @@
 	"author": "Microsoft and contributors",
 	"scripts": {
 		"build": "concurrently npm:build:api npm:build:md-magic && npm run hugo",
-		"build:api": "npm run download:api && npm run build:api-documentation",
+		"build:api": "npm run download:api && npm run build:api-documentation && npm run build:redirects",
 		"build:api-documentation": "node ./api-markdown-documenter/index.js",
 		"build:md-magic": "markdown-magic",
 		"build:md-magic:code": "markdown-magic --files \"**/*.md\" !docs --workingDirectory ..",
@@ -23,6 +23,7 @@
 		"ci:start": "http-server ./public --port 1313 --silent",
 		"clean": "rimraf --glob public content/docs/api _api-extractor-temp",
 		"download:api": "node ./download-apis.js",
+		"build:redirects": "node ./build-redirects.js",
 		"format": "npm run prettier:fix",
 		"hugo": "hugo",
 		"linkcheck": "start-server-and-test start http://localhost:1313 linkcheck:full",
