--- a/docs/package.json
+++ b/docs/package.json
@@ -17,7 +17,7 @@
 		"build:api-documentation": "node ./api-markdown-documenter/index.js",
 		"build:md-magic": "markdown-magic",
 		"build:md-magic:code": "markdown-magic --files \"**/*.md\" !docs --workingDirectory ..",
-		"build:redirects": "node ./build-redirects.js",
+		"build:redirects": "shx cp data/versions.json api/fallback/versions.json",
 		"build:repo-docs": "npm run build:md-magic:code",
 		"ci:build": "npm run build",
 		"ci:linkcheck": "start-server-and-test ci:start http://localhost:1313 linkcheck:full",
