--- a/.npmrc
+++ b/.npmrc
@@ -13,3 +13,7 @@ public-hoist-pattern[]=@arethetypeswrong/cli
 # ['*eslint*', '*prettier*'] is the default, so we add those as well
 public-hoist-pattern[]=*eslint*
 public-hoist-pattern[]=*prettier*
+
+# Experiment: we want to run a puppeteer command from the root, so it's hoisted.
+# We could add puppeteer as a direct dependency, not sure which is better.
+public-hoist-pattern[]=puppeteer
