--- a/examples/apps/data-object-grid/package.json
+++ b/examples/apps/data-object-grid/package.json
@@ -71,6 +71,7 @@
 		"@fluidframework/eslint-config-fluid": "^3.3.0",
 		"@fluidframework/test-tools": "^1.0.195075",
 		"@types/jest": "29.5.3",
+		"@types/jest-environment-puppeteer": "5.0.6",
 		"@types/node": "^18.19.0",
 		"@types/prop-types": "^15",
 		"@types/react": "^17.0.44",
@@ -84,7 +85,6 @@
 		"html-loader": "^3.1.0",
 		"html-webpack-plugin": "^5.5.0",
 		"jest": "^29.6.2",
-		"jest-environment-puppeteer": "^9.0.2",
 		"jest-junit": "^10.0.0",
 		"jest-puppeteer": "^9.0.2",
 		"prettier": "~3.0.3",
